--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-markdown": "9",
     "react-router-dom": "^7.13.0",
     "remark-gfm": "4",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.0",
