feat: Add GitHub Actions workflows for Android, Desktop (Linux/Windows), and iOS builds.

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -2,9 +2,8 @@ name: iOS Build
 
 on:
   push:
-    branches: [ "master", "main" ]
   pull_request:
-    branches: [ "master", "main" ]
+  workflow_dispatch:
 
 jobs:
   build-ios:
