--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -2,9 +2,8 @@ name: Desktop Build
 
 on:
   push:
-    branches: [ "master", "main" ]
   pull_request:
-    branches: [ "master", "main" ]
+  workflow_dispatch:
 
 jobs:
   build-linux:
