⚡ Virtualize Drawer Session List for 20x Faster Rendering

--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^19.2.3",
     "react-markdown": "9",
     "react-router-dom": "^7.13.0",
+    "react-virtualized-auto-sizer": "^2.0.2",
+    "react-window": "^2.2.6",
     "remark-gfm": "4",
     "tailwind-merge": "^3.4.0",
     "vite-plugin-pwa": "^1.2.0"
@@ -32,6 +34,8 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^5.0.0",
     "jsdom": "^27.4.0",
     "playwright": "^1.58.0",
